# kaggle-store-sales

./: 02_single-key-models.ipynb  README.md  kaggle-store-sales.ipynb  pyproject.toml  submission.csv
extras/old-store-sales/: store-sales.ipynb  submission.csv
extras/old-store-sales/log/: model_loss_df.csv
extras/old-store-sales/log/history/: DENS-416x64.csv  LSTM-432.csv
extras/old-store-sales/log/selection/: DENS-116x32.csv  DENS-216x32.csv  DENS-232x32.csv  DENS-316x32.csv  LSTM-216.csv  LSTM-232.csv  LSTM-416.csv  LSTM-432.csv  ft_LSTM-216.csv  iLSTM-32.csv  iLSTM-64.csv  iLSTM-96.csv  iLSTM_df.csv  il_DENS-316x128.csv  il_DENS-316x32.csv  il_DENS-316x64.csv  il_DENS-316x96.csv  il_LSTM-216x128.csv  il_LSTM-216x32.csv  il_LSTM-216x64.csv  il_LSTM-216x96.csv  il_LSTM_df.csv
extras/old-store-sales/models/: DENS-416x64.keras  LSTM-432.keras
kaggle-store-sales/: 01_preparation.ipynb  02_single-key-models.ipynb  02_training.ipynb
kaggle-store-sales/models/: sk_lstm.keras
kaggle-store-sales/models/weights/: sk_lstm.weights.h5
models/: sk_dense.keras
models/weights/: sk_dense.weights.h5
utils/: __init__.py  classes.py
work-in-progress/: 03_single-key-wide-models.ipynb  04_wide_models.ipynb
