[project]
name = "time-series-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.9.0",
    "tensorflow==2.16.2",
]
